--- a/main/res/layout/content_main.xml
+++ b/main/res/layout/content_main.xml
@@ -170,6 +170,7 @@
             android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="myClick"
             android:text="按钮"/>
     </LinearLayout>
 </TableLayout>
